style: :lipstick: dark mode fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,57 +6,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.search-form {
-  display: flex;
-  align-items: center;
-}
-
-.search-input {
-  flex-grow: 1;
-  padding: 0.8rem;
-  border: 0;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-.search-button {
-  padding: 0.7rem 1rem;
-  margin-left: 0.5rem;
-  background-color: var(--primary-color);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.search-button:hover {
-  background-color: #0058b7;
-}
-
-.search-input:focus,
-.search-button:focus {
-  outline: none;
-  border-color: var(--primary-color);
-  box-shadow: 0 0 0 2px rgba(0, 112, 243, 0.2);
-}
-
-.repo-details {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
-  color: #999;
-}
-
-.repo-details span {
-  display: flex;
-  align-items: center;
-}
-
-.repo-details svg {
-  margin-right: 0.5rem;
-}
-
 .loader {
   display: flex;
   justify-content: center;
@@ -66,53 +15,11 @@ html {
 
 .spinner {
   border: 4px solid rgba(116, 59, 59, 0.1);
-  border-left-color: rgb(222, 222, 236);
+  border-left-color: rgb(0, 138, 252);
   border-radius: 50%;
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
-}
-
-.card {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 1rem;
-  margin: 1rem;
-
-  background-color: #fff;
-  color: #333;
-}
-
-.card h2 {
-  font-size: 1.5rem;
-  margin-top: 0;
-}
-
-.card .card-content {
-  margin-top: 1rem;
-}
-
-.card .card-stats {
-  display: flex;
-  margin: 1rem 0;
-}
-
-.card .card-stat {
-  display: flex;
-  align-items: center;
-  margin-right: 1rem;
-}
-
-.card .card-stat svg {
-  margin-right: 0.5rem;
-}
-
-.card .card-stat span {
-  font-size: 0.9rem;
-}
-
-.courses .card h2 {
-  margin-bottom: 0;
 }
 
 @keyframes spin {
